# lazybooks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: cross-platform-checklist.md  providers.md  taxonomy.md
examples/: config.toml  taxonomy.toml
examples/demo/: README.md  config.toml
lazybooks/: __init__.py  books.py  config.py  default_taxonomy.toml  files.py  refresh.py  version.py
lazybooks/cli/: __init__.py  doctor.py  find.py  index.py  pick.py  refresh.py  sync.py  taxonomy.py
lazybooks/demo/: __init__.py  config.toml
lazybooks/demo/book-indexes/engineering/: manifest.json
lazybooks/demo/book-indexes/personal/: manifest.json
lazybooks/demo/cache/: __init__.py
lazybooks/tui/: __init__.py  curses_app.py  textual_app.py
tests/: conftest.py  test_bookindex.py  test_books.py  test_booktaxonomy.py  test_cli_doctor.py  test_cli_find.py  test_cli_refresh.py  test_cli_sync.py  test_config.py  test_files.py  test_tui.py
