[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lazybooks"
dynamic = ["version"]
description = "Terminal UI for cloud-hosted Calibre and PDF libraries"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Rich Lee", email = "richalee@pm.me" }
]
keywords = ["books", "calibre", "onedrive", "rclone", "tui", "textual"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "textual>=0.86",
]

[project.urls]
Homepage = "https://github.com/richlee/lazybooks"
Repository = "https://github.com/richlee/lazybooks"
Issues = "https://github.com/richlee/lazybooks/issues"

[project.optional-dependencies]
pick = ["fzf.py>=1.0"]
dev = ["pytest>=8"]

[project.scripts]
lazybooks = "lazybooks.tui.textual_app:main"
bookfind = "lazybooks.cli.find:main"
bookrefresh = "lazybooks.cli.refresh:main"

[tool.setuptools]
packages = ["lazybooks", "lazybooks.cli", "lazybooks.tui"]
script-files = [
  "bin/bookindex",
  "bin/bookpick",
  "bin/booktaxonomy",
  "bin/lazybooks-curses",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
