[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lazybooks"
dynamic = ["version"]
description = "Terminal UI for cloud-hosted Calibre and PDF libraries"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Rich Lee", email = "richalee@pm.me" }
]
keywords = ["books", "calibre", "onedrive", "rclone", "tui", "textual"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "textual>=0.86",
]

[project.urls]
Homepage = "https://github.com/richlee/lazybooks"
Repository = "https://github.com/richlee/lazybooks"
Issues = "https://github.com/richlee/lazybooks/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1.5", "twine>=6.2"]

[project.scripts]
lazybooks = "lazybooks.tui.textual_app:main"
lazybooks-doctor = "lazybooks.cli.doctor:main"
lazybooks-curses = "lazybooks.tui.curses_app:run"
bookfind = "lazybooks.cli.find:main"
bookindex = "lazybooks.cli.index:main"
bookpick = "lazybooks.cli.pick:main"
bookrefresh = "lazybooks.cli.refresh:main"
booktaxonomy = "lazybooks.cli.taxonomy:main"

[tool.setuptools.packages.find]
include = ["lazybooks*"]
namespaces = false

[tool.setuptools.package-data]
"lazybooks" = [
  "default_taxonomy.toml",
]
"lazybooks.demo" = [
  "config.toml",
  "book-indexes/*/manifest.json",
  "cache/*.pdf",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
